<resources>
    <string name="app_name">위피드</string>
    <string name="app_name_eng">With Puppy</string>

    <!-- BottomNavigationView -->
    <string name="none">무제</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_community">Community</string>
    <string name="navigation_notification">Notification</string>
    <string name="common_sense">알아두면 좋은 상식</string>
    <string name="popular_pet">인기 댕댕이</string>
    <string name="find_pet">강아지를 찾습니다</string>
    <string name="more">더보기</string>
    <string name="dashboard_free">자유 게시판</string>
    <string name="dashboard_anonymous">익명 게시판</string>
    <string name="dashbard_promotion">홍보 게시판</string>
    <string name="dashbard_preview">지역 시사</string>

    <string name="board">유저들과 다양한 이야기를 나눠보세요.</string>
    <string name="show_comment">댓글 보기</string>
    <string name="insert_comment">댓글 입력</string>
    <string name="success_comment">댓글이 작성되었습니다.</string>
    <string name="error_count">사진은 최대 10장까지만 선택 가능합니다.</string>
    <string name="count_write">0/10</string>
    <string name="error_auth">인증 번호가 올바르지 않습니다.</string>
    <string name="success_write">게시글이 작성되었습니다.</string>
    <string name="content">내용</string>
    <string name="title">제목</string>
    <string name="write_board">게시글 작성</string>
    <string name="code">인증 번호 입력</string>
    <string name="title_email">[위피드]이메일 인증 번호</string>
    <string name="message_email">해당 이메일은 인증 번호 발송 이메일입니다.\n인증 번호는 다음과 같습니다.</string>
    <string name="alert_timer">해당 인증 번호는 3분 동안만 유효합니다.</string>
    <string name="push_auth">인증 요청</string>
    <string name="auth_email">이메일 인증</string>
    <string name="auth_success">이메일 인증이 완료되었습니다.</string>
    <string name="profileImage_upload">프로필 이미지가 변경되었습니다.</string>
    <string name="profileImage_delete">프로필 이미지가 삭제되었습니다.</string>
    <string name="done">확인</string>
    <string name="email_authentication">이메일을 인증해야 정상적인 이용이 가능합니다.</string>
    <string name="message">Message</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="message_logout">로그아웃 하시겠습니까?</string>
    <string name="logout">로그아웃</string>
    <string name="error_name">이미 사용중인 닉네임입니다.</string>
    <string name="success_signUp">회원가입에 성공하였습니다.</string>
    <string name="success_editProfile">프로필 정보가 변경되었습니다.</string>
    <string name="submit">제출</string>
    <string name="name">닉네임</string>
    <string name="edit_profile">프로필 설정</string>
    <string name="change_profile">프로필 변경</string>
    <string name="error_signIn">회원정보가 일치하지 않습니다.</string>
    <string name="error_blank">해당란이 공백입니다.</string>
    <string name="signIn">로그인</string>
    <string name="signUp">회원가입</string>
    <string name="email">이메일</string>
    <string name="pw">비밀번호</string>
    <string name="pw_certification">비밀번호 확인</string>
    <string name="email_error">이메일 형식을 확인해주세요.</string>
    <string name="pw_error">길이는 8~16자로, 최소 하나의 문자와 숫자를 포함해주세요.</string>
    <string name="nickName_error">2~8자 사이로 지어주세요.</string>
    <string name="pw_validate">이미 사용중인 이메일입니다.</string>
    <string name="pw_certification_error">비밀번호가 일치하지 않습니다.</string>
    <string name="delete_comment">댓글을 삭제하였습니다.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>